Classes changed to BEM.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </nav>
   </header>
   <main>
-    <div id="homePage">
-      <div id="homeSection">
+    <div id="homepage">
+      <div class="home-section">
         <div class="section section1">
-          <div class="homeText d-flex flex-column justify-content-between ml-4">
+          <div class="home-section__text d-flex flex-column justify-content-between ml-4">
             <h1>Hello,
               <span class="smaller">I'm Genadi Georgiev</span>
             </h1>
@@ -67,86 +67,86 @@
               <br>and create
               <br>User Interface</p>
           </div>
-          <!-- end of hometext -->
+          <!-- end of home-section__text -->
         </div>
         <!-- end of section -->
       </div>
-      <!-- end of homesection -->
-      <div id="projectsSection">
-        <div id="projectsSection-slick" class="mb-3">
-          <div class="projectItem projectItem1 position-relative">
-            <div class="projectText">
+      <!-- end of home-section -->
+      <div id="projects-section">
+        <div id="projects-section--slick" class="mb-3">
+          <div class="projects-section__item projects-section__item1 position-relative">
+            <div class="projects-section__item--text">
               <h4>Mashmo Clothing</h4>
               <p>UX &amp; UI</p>
             </div>
           </div>
-          <!-- end of projectItem -->
-          <div class="projectItem projectItem2 position-relative">
-            <div class="projectText">
+          <!-- end of projects-section__item -->
+          <div class="projects-section__item projects-section__item2 position-relative">
+            <div class="projects-section__item--text">
               <h4>Vasilena Yancheva</h4>
               <p>UI | Logo</p>
             </div>
           </div>
-          <!-- end of projectItem -->
-          <div class="projectItem projectItem3 position-relative">
-            <div class="projectText">
+          <!-- end of projects-section__item -->
+          <div class="projects-section__item projects-section__item3 position-relative">
+            <div class="projects-section__item--text">
               <h4>Personal Portfolio</h4>
               <p>UX &amp; UI | Logo</p>
             </div>
           </div>
-          <!-- end of projectItem -->
+          <!-- end of projects-section__item -->
         </div>
-        <!-- end of projectsSection-slick -->
-        <a class="projectLink ml-4" href="projects.html">View my work &rarr;</a>
+        <!-- end of projects-section--slick -->
+        <a class="projects-section__item--link ml-4" href="projects.html">View my work &rarr;</a>
       </div>
-      <!-- end of projectsSection -->
-      <div id="testimonialsSection" class="text-center">
-        <div id="testimonialsSection-slick">
-          <div class="testimonialItem testimonialItem1 p-4">
-            <div class="testimonialHeading d-flex flex-column align-items-center mb-2">
+      <!-- end of projects-section -->
+      <div id="testimonials-section" class="text-center">
+        <div id="testimonials-section--slick">
+          <div class="testimonials-section__item testimonials-section__item1 p-4">
+            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
               <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
             </div>
-            <!-- end of testimonialHeading -->
-            <div class="testimonialText">
+            <!-- end of testimonials-section__heading -->
+            <div class="testimonials-section__content">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
                 nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
                 perspiciatis facilis quisquam!</p>
             </div>
-            <!-- end of testimonialText -->
+            <!-- end of testimonials-section__content -->
           </div>
-          <!-- end of testimonialItem -->
-          <div class="testimonialItem testimonialItem1 p-4">
-            <div class="testimonialHeading d-flex flex-column align-items-center mb-2">
+          <!-- end of testimonials-section__item -->
+          <div class="testimonials-section__item testimonials-section__item1 p-4">
+            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
               <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
             </div>
-            <!-- end of testimonialHeading -->
-            <div class="testimonialText">
+            <!-- end of testimonials-section__heading -->
+            <div class="testimonials-section__content">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
                 nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
                 perspiciatis facilis quisquam!</p>
             </div>
-            <!-- end of testimonialText -->
+            <!-- end of testimonials-section__content -->
           </div>
-          <!-- end of testimonialItem -->
-          <div class="testimonialItem testimonialItem1 px-4">
-            <div class="testimonialHeading d-flex flex-column align-items-center mb-2">
+          <!-- end of testimonials-section__item -->
+          <div class="testimonials-section__item testimonials-section__item1 px-4">
+            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
               <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
             </div>
-            <!-- end of testimonialHeading -->
-            <div class="testimonialText">
+            <!-- end of testimonials-section__heading -->
+            <div class="testimonials-section__content">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
                 nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
                 perspiciatis facilis quisquam!</p>
             </div>
-            <!-- end of testimonialText -->
+            <!-- end of testimonials-section__content -->
           </div>
-          <!-- end of testimonialItem -->
+          <!-- end of testimonials-section__item -->
         </div>
         <!-- end of testimonialsSection-slick -->
       </div>
@@ -155,7 +155,7 @@
     <!-- end of homepage -->
   </main>
   <footer>
-
+    
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
