--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About me</a>
+            <a class="nav-link" href="about.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My skills</a>
+            <a class="nav-link" href="skills.html">My skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My work</a>
+            <a class="nav-link" href="projects.html">My work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact me</a>
+            <a class="nav-link" href="contact.html">Contact me</a>
           </li>
           <div class="someIcons d-flex align-items-center justify-content-center mt-3">
             <a href="https://www.behance.net/gdesignbg" class="m-2">
@@ -96,8 +96,8 @@
           </div>
           <!-- end of projects-section__item -->
         </div>
-        <!-- end of projects-section--slick -->
-        <a class="projects-section__item--link ml-4" href="projects.html">View my work &rarr;</a>
+        <!-- end of projects-section-slick -->
+        <a class="arrow-link ml-4" href="projects.html">View my work &rarr;</a>
       </div>
       <!-- end of projects-section -->
       <div class="testimonials-section text-center">
@@ -175,11 +175,13 @@
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
     </div>
+    <!-- end of footer__logo -->
     <div class="footer__text row justify-content-center text-center">
       <p>If you like
         <a href="projects.html">My work</a>, you can
         <a href="contact.html">Contact me</a> and start working together.</p>
     </div>
+        <!-- end of footer__text -->
     <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
       <a href="https://www.behance.net/gdesignbg" class="m-2">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
@@ -188,10 +190,12 @@
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
       </a>
     </div>
+        <!-- end of someIcons -->
     <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
       <p>Design by Genadi Georgiev
         <br> Copyright 2018</p>
     </div>
+        <!-- end of footer__copyright -->
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
