Skills page ready.

--- a/skills.html
+++ b/skills.html
@@ -56,86 +56,95 @@
     </nav>
   </header>
   <main>
-    <div id="aboutpage">
-      <h2 class="px-4">About me.</h2>
-      <div class="aboutpage__section1">
-        <div class="px-4 my-5">
-          <blockquote class="aboutpage__blockquote px-4 py-2">Creativity is nothing
-            <br> but a mind set free.</blockquote>
+    <div id="skillspage">
+      <h2 class="px-4">My skills.</h2>
+      <div class="skillspage__section secton1 mt-5 px-4 py-4">
+        <div class="skillspage-section__heading">
+          <h3>User interface</h3>
         </div>
-        <img class="py-1" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
-        <div class="aboutpage__text py-5 px-4">
-          <h3>Who is Genadi Georgiev?</h3>
+        <!-- end of skillspage-section__heading -->
+        <div class="skillspage-section__content">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
             cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
         </div>
-        <!-- end of aboutpage__text -->
-        <div class="aboutpage__text px-4">
-          <h3>My education.</h3>
+        <!-- end of skillspage-section__content -->
+      </div>
+      <!-- end of skillspage__section -->
+      <div class="skillspage__section section2 px-4 py-5">
+        <div class="skillspage-section__heading">
+          <h3>User Experience</h3>
+        </div>
+        <!-- end of skillspage-section__heading -->
+        <div class="skillspage-section__content">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
+            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
         </div>
-        <!-- end of aboutpage__text -->
+        <!-- end of skillspage-section__content -->
       </div>
-      <!-- end of aboutpage__section1 -->
-      <div class="aboutpage__section2 my-5">
-        <div class="aboutpage__section2--slick">
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/videoProcessingPremierePro.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643629/genadi/aboutPage/certificates/motionDesignAfterEffects.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignInDesign.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignPhotoshop.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/designFundamentals.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignIllustrator.png">
-          </div>
-          <!-- end of aboutpage__certificate -->
+      <!-- end of skillspage__section -->
+      <div class="skillspage__section section3 px-4 py-5">
+        <div class="skillspage-section__heading">
+          <h3>What about Logo Design?</h3>
         </div>
-        <!-- end of projects-section-slick -->
-      </div>
-      <!-- end of aboutpage__section2 -->
-      <div class="aboutpage__section3 pb-5">
-        <div class="aboutpage__text px-4">
-          <h3>What more..</h3>
+        <!-- end of skillspage-section__heading -->
+        <div class="skillspage-section__content">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo odio sapiente numquam est rerum illo quam animi
+            cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
         </div>
-        <img class="my-3" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg">
-        <div class="aboutpage__text px-4 mb-3 mt-3">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
-            dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
-        </div>
-        <a class="arrow-link ml-4" href="skills.html">View my skills &rarr;</a>
-        <blockquote class="aboutpage__blockquote mt-5 mx-4 px-4 py-2">
-          Now you can go to see
-          <br>
-          <a class="arrow-link" href="projects.html">My work &rarr;</a>
-        </blockquote>
-        <!-- end of aboutpage__text -->
+        <!-- end of skillspage-section__content -->
       </div>
-      <!-- end of aboutpage__section3 -->
+      <!-- end of skillspage__section -->
+      <div class="skillspage__icons text-center p-5">
+        <div class="skillspage__icons1">
+          <h3>Tools I use</h3>
+          <div class="icons-container mb-5 mt-3">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799753/genadi/skillspage/xd_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/invision_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/figma_logo.png">
+          </div>
+          <!-- end of icons-container -->
+        </div>
+        <!-- end of skillspage__icons1 -->
+        <div class="skillspage__icons2">
+          <h3>Not to forget too</h3>
+          <div class="icons-container mb-5 mt-3">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799753/genadi/skillspage/ae_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/pr_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/id_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799754/genadi/skillspage/ai_logo.png">
+          </div>
+          <!-- end of icons-container -->
+        </div>
+        <!-- end of skillspage__icons2 -->
+        <div class="skillspage__icons3">
+          <h3>Basic knowledge</h3>
+          <div class="icons-container mt-3">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799753/genadi/skillspage/3dsmax_logo.png">
+            <img class="mx-2" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533799752/genadi/skillspage/maya_logo.png">
+          </div>
+          <!-- end of icons-container -->
+        </div>
+        <!-- end of skillspage__icons3 -->
+      </div>
+      <!-- end of skillspage__icons -->
+      <div class="skillspage__gallery px-4 py-5">
+        <div class="skillspage__gallery--modal">
+          <img class="skillspage__gallery--modal-cross mr-4 mb-4" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533807477/genadi/homePage/icons/crossWhite.png">
+          <img id="skillspage__gallery--modal-content" class="px-4">
+        </div>
+        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
+        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
+        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799757/genadi/skillspage/technical.jpg">
+        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799755/genadi/skillspage/homeDesk.jpg">
+      </div>
     </div>
-    <!-- end of about -->
+    <!-- end of skillspage -->
   </main>
   <footer class="footer px-5 mt-2">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
