--- a/contact.html
+++ b/contact.html
@@ -56,102 +56,9 @@
     </nav>
   </header>
   <main>
-    <div id="homepage">
-      <div class="home-section">
-        <div class="section section1">
-          <div class="home-section__text d-flex flex-column justify-content-between ml-4">
-            <h1>Hello,
-              <span class="smaller">I'm Genadi Georgiev</span>
-            </h1>
-            <p class="m-0 pt-2">I design
-              <br>and create
-              <br>User Interface</p>
-          </div>
-          <!-- end of home-section__text -->
-        </div>
-        <!-- end of section -->
-      </div>
-      <!-- end of home-section -->
-      <div class="projects-section">
-        <div class="projects-section--slick mb-3">
-          <div class="projects-section__item projects-section__item1 position-relative">
-            <div class="projects-section__item--text">
-              <h4>Mashmo Clothing</h4>
-              <p>UX &amp; UI</p>
-            </div>
-          </div>
-          <!-- end of projects-section__item -->
-          <div class="projects-section__item projects-section__item2 position-relative">
-            <div class="projects-section__item--text">
-              <h4>Vasilena Yancheva</h4>
-              <p>User Interface</p>
-            </div>
-          </div>
-          <!-- end of projects-section__item -->
-          <div class="projects-section__item projects-section__item3 position-relative">
-            <div class="projects-section__item--text">
-              <h4>Personal Portfolio</h4>
-              <p>User Interface</p>
-            </div>
-          </div>
-          <!-- end of projects-section__item -->
-        </div>
-        <!-- end of projects-section-slick -->
-        <a class="arrow-link ml-4" href="projects.html">View my work &rarr;</a>
-      </div>
-      <!-- end of projects-section -->
-      <div class="testimonials-section text-center">
-        <div class="testimonials-section--slick">
-          <div class="testimonials-section__item testimonials-section__item1 p-4">
-            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
-            </div>
-            <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
-            </div>
-            <!-- end of testimonials-section__content -->
-          </div>
-          <!-- end of testimonials-section__item -->
-          <div class="testimonials-section__item testimonials-section__item1 p-4">
-            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
-            </div>
-            <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
-            </div>
-            <!-- end of testimonials-section__content -->
-          </div>
-          <!-- end of testimonials-section__item -->
-          <div class="testimonials-section__item testimonials-section__item1 px-4">
-            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
-            </div>
-            <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
-            </div>
-            <!-- end of testimonials-section__content -->
-          </div>
-          <!-- end of testimonials-section__item -->
-        </div>
-        <!-- end of testimonialsSection-slick -->
-      </div>
-      <!-- end of testimonialsSection -->
-      <div class="contact-section text-center px-4">
+    <div id="contactpage">
+      <h2 class="px-4">Contact me.</h2>
+      <div class="contact-section text-center py-5 px-4">
         <form class="contact-section__form" method="POST" action="https://formspree.io/genadidesign@gmail.com">
           <h2>Write to me</h2>
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
@@ -166,10 +73,26 @@
         <!-- end of form -->
       </div>
       <!-- end of contact-section -->
+      <div class="contact-section px-4 text-center">
+        <h2>Contact information</h2>
+        <div class="contact-section__text d-flex justify-content-between">
+          <div class="text-left py-4 d-flex flex-column">
+            <span class="contact-section__text--bigger mb-4">Telephone: </span>
+            <span class="contact-section__text--bigger mb-4">Email: </span>
+            <span class="contact-section__text--bigger">Address: </span>
+          </div>
+          <div class="text-left py-4 d-flex flex-column">
+            <span class="contact-section__text--smaller mb-4"><a href="">+359 895 794 733</a></span>
+            <span class="contact-section__text--smaller mb-4"><a href="">genadidesign@gmail.com</a></span>
+            <span class="contact-section__text--smaller"><a href="">Varna, Bulgaria</a></span>
+          </div>
+
+        </div>
+      </div>
     </div>
     <!-- end of homepage -->
   </main>
-  <footer class="footer px-5">
+  <footer class="footer px-5 mt-2">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
@@ -181,7 +104,7 @@
         <a href="projects.html">My work</a>, you can
         <a href="contact.html">Contact me</a> and start working together.</p>
     </div>
-        <!-- end of footer__text -->
+    <!-- end of footer__text -->
     <div class="someIcons row justify-content-center align-items-center pt-4 pb-5">
       <a href="https://www.behance.net/gdesignbg" class="m-2">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/behance.png">
@@ -190,12 +113,12 @@
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532944215/genadi/homePage/icons/instagram.png">
       </a>
     </div>
-        <!-- end of someIcons -->
+    <!-- end of someIcons -->
     <div class="footer__copyright row justify-content-center text-center py-4 mx-3">
       <p>Design by Genadi Georgiev
         <br> Copyright 2018</p>
     </div>
-        <!-- end of footer__copyright -->
+    <!-- end of footer__copyright -->
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
