Mobile version finished, tablet version in the beginning.

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 px-4">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -57,14 +57,17 @@
   </header>
   <main>
     <div id="aboutpage">
-      <h2 class="px-4">About me.</h2>
+      <h2>About me.</h2>
       <div class="aboutpage__section1">
-        <div class="px-4 my-5">
-          <blockquote class="aboutpage__blockquote px-4 py-2">Creativity is nothing
-            <br> but a mind set free.</blockquote>
+        <div class="my-5">
+          <blockquote class="aboutpage__blockquote">
+            <p>
+              Creativity is nothing but a mind set free.
+            </p>
+          </blockquote>
         </div>
         <img class="py-1" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533645904/genadi/aboutPage/genadi_photo.jpg">
-        <div class="aboutpage__text py-5 px-4">
+        <div class="aboutpage__text py-5">
           <h3>Who is Genadi Georgiev?</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
@@ -72,7 +75,7 @@
             cum incidunt? Doloremque similique ipsa dolores deserunt perspiciatis quos dolor officia dolorem?</p>
         </div>
         <!-- end of aboutpage__text -->
-        <div class="aboutpage__text px-4">
+        <div class="aboutpage__text">
           <h3>My education.</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
@@ -82,51 +85,51 @@
       <!-- end of aboutpage__section1 -->
       <div class="aboutpage__section2 my-5">
         <div class="aboutpage__section2--slick">
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/uxDesign.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/videoProcessingPremierePro.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/videoProcessingPremierePro.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643629/genadi/aboutPage/certificates/motionDesignAfterEffects.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643629/genadi/aboutPage/certificates/motionDesignAfterEffects.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignInDesign.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignInDesign.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignPhotoshop.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignPhotoshop.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/designFundamentals.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/designFundamentals.png">
+          </a>
           <!-- end of aboutpage__certificate -->
-          <div class="aboutpage__certificate">
-            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533643628/genadi/aboutPage/certificates/graphicDesignIllustrator.png">
-          </div>
+          <a href="#" class="aboutpage__certificate">
+            <img src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_576/v1533643628/genadi/aboutPage/certificates/graphicDesignIllustrator.png">
+          </a>
           <!-- end of aboutpage__certificate -->
         </div>
         <!-- end of projects-section-slick -->
       </div>
       <!-- end of aboutpage__section2 -->
       <div class="aboutpage__section3 pb-5">
-        <div class="aboutpage__text px-4">
+        <div class="aboutpage__text">
           <h3>What more..</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
         <img class="my-3" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_500/v1533644670/genadi/aboutPage/workingPicture.jpg">
-        <div class="aboutpage__text px-4 mb-3 mt-3">
+        <div class="aboutpage__text mb-3 mt-3">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, rerum accusamus pariatur corporis quod similique
             dignissimos magnam architecto, illum ea neque ratione veritatis recusandae vitae aut. Eos illo alias facere!</p>
         </div>
-        <a class="arrow-link ml-4" href="skills.html">View my skills &rarr;</a>
-        <blockquote class="aboutpage__blockquote mt-5 mx-4 px-4 py-2">
+        <a class="arrow-link" href="skills.html">View my skills &rarr;</a>
+        <blockquote class="aboutpage__blockquote mt-5 px-4 py-2">
           Now you can go to see
           <br>
           <a class="arrow-link" href="projects.html">My work &rarr;</a>
@@ -137,7 +140,7 @@
     </div>
     <!-- end of about -->
   </main>
-  <footer class="footer px-5 mt-2">
+  <footer class="footer mt-2">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
