--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 px-4">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -57,8 +57,8 @@
   </header>
   <main>
     <div id="contactpage">
-      <h2 class="px-4">Contact me.</h2>
-      <div class="contact-section text-center py-5 px-4">
+      <h2>Contact me.</h2>
+      <div class="contact-section text-center py-5">
         <form class="contact-section__form" method="POST" action="https://formspree.io/genadidesign@gmail.com">
           <h2>Write to me</h2>
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
@@ -73,7 +73,7 @@
         <!-- end of form -->
       </div>
       <!-- end of contact-section -->
-      <div class="contact-section px-4 text-center">
+      <div class="contact-section text-center">
         <h2>Contact information</h2>
         <div class="contact-section__text d-flex justify-content-between">
           <div class="text-left py-4 d-flex flex-column">
@@ -82,17 +82,24 @@
             <span class="contact-section__text--bigger">Address: </span>
           </div>
           <div class="text-left py-4 d-flex flex-column">
-            <span class="contact-section__text--smaller mb-4"><a href="">+359 895 794 733</a></span>
-            <span class="contact-section__text--smaller mb-4"><a href="">genadidesign@gmail.com</a></span>
-            <span class="contact-section__text--smaller"><a href="">Varna, Bulgaria</a></span>
+            <span class="contact-section__text--smaller mb-4">
+              <a href="">+359 895 794 733</a>
+            </span>
+            <span class="contact-section__text--smaller mb-4">
+              <a href="">genadidesign@gmail.com</a>
+            </span>
+            <span class="contact-section__text--smaller">
+              <a href="">Varna, Bulgaria</a>
+            </span>
           </div>
-
         </div>
+        <!-- end of contact-section__text -->
       </div>
+      <!-- end of contact-section -->
     </div>
-    <!-- end of homepage -->
+    <!-- end of contactpage -->
   </main>
-  <footer class="footer px-5 mt-2">
+  <footer class="footer mt-5">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
