--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 px-4">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -56,9 +56,9 @@
     </nav>
   </header>
   <main>
-    <div id="projectspage" class="px-4">
+    <div id="projectspage">
       <h2>Selected work.</h2>
-      <div class="projects__container my-5">
+      <div class="projects__container d-sm-flex flex-wrap my-5">
         <div class="projects__item projects__item1">
           <div class="projects__item--text mb-3 ml-3">
             <h4 class="mb-1">Mashmo Clothing eCommerce</h4>
@@ -100,7 +100,7 @@
     </div>
     <!-- end of projectspage -->
   </main>
-  <footer class="footer px-5 mt-2">
+  <footer class="footer mt-2">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
