--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 px-4">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -59,11 +59,11 @@
     <div id="homepage">
       <div class="home-section">
         <div class="section section1">
-          <div class="home-section__text d-flex flex-column justify-content-between ml-4">
+          <div class="home-section__text d-flex flex-column justify-content-between justify-content-sm-center">
             <h1>Hello,
               <span class="smaller">I'm Genadi Georgiev</span>
             </h1>
-            <p class="m-0 pt-2">I design
+            <p class="mb-0">I design
               <br>and create
               <br>User Interface</p>
           </div>
@@ -97,12 +97,27 @@
           <!-- end of projects-section__item -->
         </div>
         <!-- end of projects-section-slick -->
-        <a class="arrow-link ml-4" href="projects.html">View my work &rarr;</a>
+        <a class="arrow-link" href="projects.html">View my work &rarr;</a>
       </div>
       <!-- end of projects-section -->
       <div class="testimonials-section text-center">
         <div class="testimonials-section--slick">
-          <div class="testimonials-section__item testimonials-section__item1 p-4">
+          <div class="testimonials-section__item testimonials-section__item1">
+            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
+              <img class="mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
+              <h4 class="mb-3">Vasilena Yancheva</h4>
+              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
+            </div>
+            <!-- end of testimonials-section__heading -->
+            <div class="testimonials-section__content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
+                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
+                perspiciatis facilis quisquam!</p>
+            </div>
+            <!-- end of testimonials-section__content -->
+          </div>
+          <!-- end of testimonials-section__item -->
+          <div class="testimonials-section__item testimonials-section__item1">
             <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
@@ -117,22 +132,7 @@
             <!-- end of testimonials-section__content -->
           </div>
           <!-- end of testimonials-section__item -->
-          <div class="testimonials-section__item testimonials-section__item1 p-4">
-            <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
-              <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
-              <h4 class="mb-3">Vasilena Yancheva</h4>
-              <p>Creator of "Vasilena Yancheva Cosmetology &amp; Aestethics"</p>
-            </div>
-            <!-- end of testimonials-section__heading -->
-            <div class="testimonials-section__content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia impedit neque explicabo reiciendis deleniti
-                nam officiis voluptates, dolorem necessitatibus quibusdam nulla quasi quaerat magnam nihil magni nesciunt
-                perspiciatis facilis quisquam!</p>
-            </div>
-            <!-- end of testimonials-section__content -->
-          </div>
-          <!-- end of testimonials-section__item -->
-          <div class="testimonials-section__item testimonials-section__item1 px-4">
+          <div class="testimonials-section__item testimonials-section__item1">
             <div class="testimonials-section__heading d-flex flex-column align-items-center mb-2">
               <img class="w-50 mb-3" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533112795/genadi/homePage/vasilena_picture.png">
               <h4 class="mb-3">Vasilena Yancheva</h4>
@@ -151,7 +151,7 @@
         <!-- end of testimonialsSection-slick -->
       </div>
       <!-- end of testimonialsSection -->
-      <div class="contact-section text-center px-4">
+      <div class="contact-section text-center">
         <form class="contact-section__form" method="POST" action="https://formspree.io/genadidesign@gmail.com">
           <h2>Write to me</h2>
           <input type="hidden" name="_subject" value="E-mail from portfolio" />
@@ -169,7 +169,7 @@
     </div>
     <!-- end of homepage -->
   </main>
-  <footer class="footer px-5">
+  <footer class="footer">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
