--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100 px-4">
+    <nav class="navbar navbar-expand-lg navbar-light position-fixed w-100">
       <a class="navbar-brand logo p-0 m-0" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
       </a>
@@ -57,8 +57,8 @@
   </header>
   <main>
     <div id="skillspage">
-      <h2 class="px-4">My skills.</h2>
-      <div class="skillspage__section secton1 mt-5 px-4 py-4">
+      <h2 class="">My skills.</h2>
+      <div class="skillspage__section secton1 mt-5 py-4">
         <div class="skillspage-section__heading">
           <h3>User interface</h3>
         </div>
@@ -72,7 +72,7 @@
         <!-- end of skillspage-section__content -->
       </div>
       <!-- end of skillspage__section -->
-      <div class="skillspage__section section2 px-4 py-5">
+      <div class="skillspage__section section2 py-5">
         <div class="skillspage-section__heading">
           <h3>User Experience</h3>
         </div>
@@ -86,7 +86,7 @@
         <!-- end of skillspage-section__content -->
       </div>
       <!-- end of skillspage__section -->
-      <div class="skillspage__section section3 px-4 py-5">
+      <div class="skillspage__section section3 py-5">
         <div class="skillspage-section__heading">
           <h3>What about Logo Design?</h3>
         </div>
@@ -133,20 +133,28 @@
         <!-- end of skillspage__icons3 -->
       </div>
       <!-- end of skillspage__icons -->
-      <div class="skillspage__gallery px-4 py-5">
+      <div class="skillspage__gallery py-5 d-sm-flex flex-wrap">
         <div class="skillspage__gallery--modal">
           <img class="skillspage__gallery--modal-cross mr-4 mb-4" src="https://res.cloudinary.com/dndvaqitq/image/upload/v1533807477/genadi/homePage/icons/crossWhite.png">
           <img id="skillspage__gallery--modal-content" class="px-4">
         </div>
-        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
-        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
-        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799757/genadi/skillspage/technical.jpg">
-        <img src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799755/genadi/skillspage/homeDesk.jpg">
+        <div class="gallery-img">
+          <img class="img-fluid" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533804032/genadi/skillspage/work.jpg">
+        </div>
+        <div class="gallery-img">
+          <img class="img-fluid" src="http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1533799764/genadi/skillspage/logoGenadi.jpg">
+        </div>
+        <div class="gallery-img">
+          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1534416642/genadi/skillspage/technical.jpg">
+        </div>
+        <div class="gallery-img">
+          <img class="img-fluid" src="https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_600/v1534416471/genadi/skillspage/homeDesk.jpg">
+        </div>
       </div>
     </div>
     <!-- end of skillspage -->
   </main>
-  <footer class="footer px-5 mt-2">
+  <footer class="footer mt-2">
     <div class="footer__logo row justify-content-center pt-4 pb-5">
       <a class="logo" href="index.html">
         <img src="https://res.cloudinary.com/dndvaqitq/image/upload/v1532941359/genadi/homePage/icons/logo.png">
